@@ -2514,6 +2514,8 @@ public: // for now...
   BX_SMF BX_INSF_TYPE INVEPT(bxInstruction_c *) BX_CPP_AttrRegparmN(1);
   BX_SMF BX_INSF_TYPE INVVPID(bxInstruction_c *) BX_CPP_AttrRegparmN(1);
   /* VMXx2 */
+
+  BX_SMF BX_INSF_TYPE INVPCID(bxInstruction_c *) BX_CPP_AttrRegparmN(1);
 #endif
 
 #if BX_SUPPORT_AVX && BX_CPU_LEVEL >= 6
@@ -4380,6 +4382,15 @@ enum {
   BX_PRIVILEGED_SOFTWARE_INTERRUPT = 5,
   BX_SOFTWARE_EXCEPTION = 6   // they are software exceptions
 };
+
+#if BX_CPU_LEVEL >= 6
+enum {
+  BX_INVPCID_INDIVIDUAL_ADDRESS_NON_GLOBAL_INVALIDATION,
+  BX_INVPCID_SINGLE_CONTEXT_NON_GLOBAL_INVALIDATION,
+  BX_INVPCID_ALL_CONTEXT_INVALIDATION,
+  BX_INVPCID_ALL_CONTEXT_NON_GLOBAL_INVALIDATION
+};
+#endif
 
 // <TAG-DEFINES-DECODE-START>
 
